Incremental changes
* Adding GraphTest for understanding JUNG
* Adding JUNG visualization packages
* Cleaning up AtomVertex
* Working towards proper edges in LatticeGraph (in progress)